# LogFeed

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
modules/: parser.py  ui.py
