[project]
name = "logfeed"
version = "0.0.0"
description = "Visualize evtx logs in feed-like maner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evtx>=0.11.0",
    "polars>=1.37.1",
    "streamlit>=1.53.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.0",
    "ruff>=0.14.14",
]
